...
            "state": "translated",
            "value": "账户"
          }
        }
      }
    },
    "Accounts": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "账户"
          }
...
            "state": "translated",
            "value": "添加账户"
          }
        }
      }
    },
    "Add Budget": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "添加预算"
          }
...
            "state": "translated",
            "value": "添加计划"
          }
        }
      }
    },
    "Add Transaction": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "添加交易"
          }
...
            "state": "translated",
            "value": "日历"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "取消"
          }
...
            "state": "translated",
            "value": "优先级 %lld"
          }
        }
      }
    },
    "Privacy mode": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "隐私模式"
          }
...
            "state": "translated",
            "value": "示例 — $1,234.56"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "保存"
          }
...
            "state": "translated",
            "value": "选择计划项"
          }
        }
      }
    },
    "Select a transaction": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "选择交易"
          }
...
            "state": "translated",
            "value": "在下方选择要移入此新分组的账户（可选）。"
          }
        }
      }
    },
    "Select an account": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "选择账户"
          }
...
